Updated Swagger for question scoring.
AST-394: Document format of feedback that OHM will return
